<resources>
    <string name="app_name">OLX Clone</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_region">Região</string>
    <string name="title_activity_categories">Todas as categorias</string>
    <string name="title_activity_filters">Filtrar busca</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Acesse sua conta agora!</string>
    <string name="nav_header_subtitle">Clique aqui</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Anúncios</string>
    <string name="menu_insert">Inserir Anúncio</string>
    <string name="menu_chat">Chat</string>
    <string name="menu_profile">Minha Conta</string>
    <string name="menu_support">Suporte</string>
    <string name="menu_help">Ajuda e Contato</string>
    <string name="menu_questions">Dúvidas Frequentes</string>
    <string name="menu_security">Dicas de Segurança</string>
    <string name="menu_terms">Termos de Uso</string>
    <string name="menu_evaluate">Avalie na Google Play</string>
    <string name="menu_facebook">Curta no Facebook</string>

    <string name="menu_search">Search</string>
    <string name="menu_favorite">Favoritos</string>

    <string name="location">Localidade</string>
    <string name="category">Categoria</string>
    <string name="filters">Filtros</string>
    <string name="enter">Entrar</string>

    <string name="clone">Clone</string>

    <string name="text_my_location_now">Minha localização atual</string>

    <string name="text_forgot_password"><a href="http://www.google.com">Esqueceu sua senha?</a></string>
    <string name="text_register">Não tem uma conta? <a href="http://www.google.com">Cadastre-se</a></string>
    <string name="text_terms">Ao continuar, você concorda com os <a href="http://www.google.com">Termos de Uso</a> e a <a href="http://www.google.com">Política de Privacidade</a> da OLX, e também, em receber comunicações via e-mail e push da OLX e seus parceiros.</string>
</resources>
