<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_olx"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_insert"
            android:icon="@drawable/ic_menu_insert"
            android:title="@string/menu_insert" />
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_menu_chat"
            android:title="@string/menu_chat" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_menu_favorite"
            android:title="@string/menu_favorite" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_profile"
            android:title="@string/menu_profile" />

    </group>

    <item android:title="@string/menu_support">
        <menu>
            <item
                android:id="@+id/nav_help"
                android:title="@string/menu_help"/>
            <item
                android:id="@+id/nav_questions"
                android:title="@string/menu_questions"/>
            <item
                android:id="@+id/nav_security"
                android:title="@string/menu_security"/>
            <item
                android:id="@+id/nav_terms"
                android:title="@string/menu_terms"/>
            <item
                android:id="@+id/nav_evaluate"
                android:title="@string/menu_evaluate"/>
            <item
                android:id="@+id/nav_facebook"
                android:title="@string/menu_facebook"/>
        </menu>
    </item>

</menu>