<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/app_bar_main"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="12"
        android:background="@color/main_tab"
        android:elevation="10dp">

        <Button
            android:id="@+id/button_location"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/main_tab"
            android:text="@string/location"
            android:textAllCaps="false"
            android:textSize="7pt"
            android:textColor="@color/colorPrimary"
            android:outlineSpotShadowColor="@color/colorPrimary"/>

        <Button
            android:id="@+id/button_category"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@color/main_tab"
            android:text="@string/category"
            android:textAllCaps="false"
            android:textSize="7pt"
            android:textColor="@color/colorPrimary" />

        <Button
            android:id="@+id/button_filters"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/main_tab"
            android:text="@string/filters"
            android:textAllCaps="false"
            android:textSize="7pt"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>

    <ListView
        android:id="@+id/listView_items"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:elevation="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp" >

    </ListView>


</LinearLayout>
