<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_tab"
        android:layout_weight="1.8">

        <Button
            android:id="@+id/btnLogin_face"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/main_tab"
            android:background="@drawable/background_border_button_filter_blue"
            android:layout_gravity="center_vertical"
            android:textAllCaps="false"
            android:text="Entrar com Facebook"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvLogin_acessar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="Acessar com e-mail:"/>

            <TextView
                android:id="@+id/tvLogin_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvLogin_acessar"
                android:layout_alignParentLeft="true"
                android:textStyle="bold"
                android:layout_marginTop="16dp"
                android:text="E-mail"/>

            <EditText
                android:id="@+id/edLogin_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvLogin_email"
                android:layout_marginTop="8dp"
                android:background="@drawable/background_border_line"
                android:inputType="textEmailAddress"/>

            <TextView
                android:id="@+id/tvLogin_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edLogin_email"
                android:textStyle="bold"
                android:layout_marginTop="24dp"
                android:text="Senha"/>

            <TextView
                android:id="@+id/tvLogin_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edLogin_email"
                android:layout_alignParentRight="true"
                android:layout_marginTop="24dp"
                android:text="@string/text_forgot_password"/>

            <EditText
                android:id="@+id/edLogin_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvLogin_password"
                android:layout_marginTop="8dp"
                android:background="@drawable/background_border_line"
                android:inputType="textPassword"/>

            <Button
                android:id="@+id/btnLogin_enter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/main_tab"
                android:background="@drawable/background_border_button_filter_orange"
                android:layout_below="@+id/edLogin_password"
                android:layout_marginTop="32dp"
                android:textAllCaps="false"
                android:text="Entrar"/>

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.3"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvLogin_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_register"
            android:textAlignment="center"
            android:layout_marginTop="24dp"/>

        <TextView
            android:id="@+id/tvlogin_terms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textAlignment="textStart"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/text_terms"/>


    </LinearLayout>



</LinearLayout>